--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "author": "Dane Kim",
   "license": "ISC",
   "dependencies": {
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-ejs-layouts": "^2.5.1",
+    "express-fileupload": "^1.4.0",
     "express-session": "^1.17.3",
     "method-override": "^3.0.0",
     "mongoose": "^6.3.4"
